--- a/UBSurvey.csproj
+++ b/UBSurvey.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
  
   <ItemGroup>
+    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="1.0.197" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
