몽고DB 설정 및 CRUD

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "Settings": {
+    "ConnectionString": "mongodb://allyus:hong1719~!@192.168.245.101/survey",
+    "Database": "survey",
+    "ChanelID": "5a8fb4200ad8963fa4242cb2",
+    "PageSize": 10
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
