--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "Settings": {
     "ConnectionString": "mongodb://allyus:hong1719~!@192.168.245.101/survey",
-    "Database": "survey",
+    "SurveyDatabase": "survey",
+    "UbSurveyDatabase": "ubsurvey",
     "ChanelID": "5a8fb4200ad8963fa4242cb2",
     "PageSize": 10
   },
