--- a/appsettings.json
+++ b/appsettings.json
@@ -4,8 +4,8 @@
     "SurveyDatabase": "survey",
     "UbSurveyDatabase": "ubsurvey",
     "ChanelID": "5a8fb4200ad8963fa4242cb2",
-    "PageSize": 5, 
-    "SurveyEnKey" : "asdfasdf"
+    "PageSize": 10, 
+    "SurveyEncyptKey" : "udpr%v96tyebipe$"
   },
 
   "Logging": {
