--- a/UBSurvey.csproj
+++ b/UBSurvey.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.8.2" />
+    <Reference Include="SSOCS">
+      <HintPath>SSOCS.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion> 
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
