설문 페이지 미선택시 추가 안되겎끔 처리

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,8 @@
     "UbSurveyDatabase": "ubsurvey",
     "ChanelID": "5a8fb4200ad8963fa4242cb2",
     "PageSize": 10, 
-    "SurveyEncyptKey" : "udpr%v96tyebipe$"
+    "SurveyEncyptKey" : "udpr%v96tyebipe$",
+    "ApiDomain" : "http://localhost:5000"
   },
 
   "Logging": {
