--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
     "ChanelID": "5a8fb4200ad8963fa4242cb2",
     "PageSize": 10, 
     "SurveyEncyptKey" : "udpr%v96tyebipe$",
+    "UserEncyptKey" : "#ltqdcpk$)#!_no1",
     "ApiDomain" : "http://localhost:5000"
   },
 
