--- a/UBSurvey.csproj
+++ b/UBSurvey.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="1.0.197" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.8.2" />
