--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,7 @@
       "Default": "Warning"
     }
   },
+  "connectionString" : "",
   "Settings": {
     "ConnectionString": "mongodb://allyus:hong1719~!@192.168.245.101/survey",
     "SurveyDatabase": "survey",
