--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,6 @@
       "Default": "Warning"
     }
   },
-  "connectionString" : "",
   "Settings": {
     "ConnectionString": "mongodb://allyus:hong1719~!@192.168.245.101/survey",
     "SurveyDatabase": "survey",
@@ -14,5 +13,6 @@
     "PageSize": 10, 
     "SurveyEncyptKey" : "udpr%v96tyebipe$",
     "UserEncyptKey" : "#ltqdcpk$)#!_no1",
+    "ApiDomain" : "http://localhost:5000"
   }
 }
