--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,14 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Settings": {
+    "ConnectionString": "mongodb://allyus:hong1719~!@192.168.245.101/survey",
+    "SurveyDatabase": "survey",
+    "UbSurveyDatabase": "ubsurvey",
+    "ChanelID": "5a8fb4200ad8963fa4242cb2",
+    "PageSize": 15, 
+    "SurveyEncyptKey" : "udpr%v96tyebipe$",
+    "UserEncyptKey" : "#ltqdcpk$)#!_no1"
   }
 }
