--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,6 @@
     "ChanelID": "5a8fb4200ad8963fa4242cb2",
     "PageSize": 15, 
     "SurveyEncyptKey" : "udpr%v96tyebipe$",
-    "UserEncyptKey" : "#ltqdcpk$)#!_no1",
-    "ApiDomain" : "http://localhost:5000"
+    "UserEncyptKey" : "#ltqdcpk$)#!_no1"
   }
 }
